<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/food_title"
            style="@style/TitleTextView"
            android:text="@string/food"/>

        <TextView
            android:id="@+id/food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/info_title"
            style="@style/TitleTextView"
            android:paddingTop="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/information_section"/>

        <TableLayout
            style="@style/TableLayout"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TableTextView"
                    android:layout_column="1"
                    android:text="@string/purpose"/>

                <TextView
                    android:id="@+id/purpose"
                    style="@style/TableTextView"
                    android:layout_column="2"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TableTextView"
                    android:layout_column="1"
                    android:text="@string/atm"/>

                <TextView
                    android:id="@+id/book_rooms"
                    style="@style/TableTextView"
                    android:layout_column="2"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TableTextView"
                    android:layout_column="1"
                    android:text="@string/book_rooms"/>

                <TextView
                    android:id="@+id/atm"
                    style="@style/TableTextView"
                    android:layout_column="2"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
    </com.google.android.gms.maps.MapView>
</LinearLayout>