<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/reviewBrowser"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ellipsize="middle"
        android:paddingBottom="7.5dp"
        android:paddingEnd="7.5dp"
        android:paddingStart="7.5dp"
        android:paddingTop="20dp"
        android:text="@string/ask_suggestions"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/MainButton"
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:gravity="start|center_vertical"
            android:text="@string/review_app"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/suggestions"
            style="@style/MainButton"
            android:layout_gravity="center"
            android:gravity="start|center_vertical"
            android:text="@string/suggestions"/>
    </LinearLayout>
</LinearLayout>