<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:paddingTop="@dimen/button_space">

        <TextView
            android:id="@+id/resources"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/resources"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <android.support.v7.widget.CardView
            android:id="@+id/emerg_contacts_card"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">

            <TextView
                android:id="@+id/emergency_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/background_light"
                android:text="@string/fragment_emerg_contacts"
                android:textColor="@android:color/black"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/eng_contacts_card"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:clickable="true"
            android:elevation="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">

            <TextView
                android:id="@+id/first_year_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/background_light"
                android:shadowColor="@android:color/background_light"
                android:text="@string/fragment_eng_contacts"
                android:textColor="@android:color/black"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/counselling_card"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:clickable="true"
            android:elevation="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">

            <TextView
                android:id="@+id/counselling_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/background_light"
                android:shadowColor="@android:color/background_light"
                android:text="@string/counselling_services"
                android:textColor="@android:color/black"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/career_card"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:clickable="true"
            android:elevation="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">

            <TextView
                android:id="@+id/careers_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/background_light"
                android:shadowColor="@android:color/background_light"
                android:text="@string/career_services"
                android:textColor="@android:color/black"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/links"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_space"
            android:gravity="center"
            android:text="@string/links"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <android.support.v7.widget.CardView
            android:id="@+id/solus_card"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:clickable="true"
            android:elevation="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">

            <TextView
                android:id="@+id/solus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/background_light"
                android:shadowColor="@android:color/background_light"
                android:text="@string/solus"
                android:textColor="@android:color/black"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/outlook_card"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:clickable="true"
            android:elevation="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">

            <TextView
                android:id="@+id/outlook_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/background_light"
                android:shadowColor="@android:color/background_light"
                android:text="@string/outlook365"
                android:textColor="@android:color/black"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/onq_card"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:clickable="true"
            android:elevation="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">

            <TextView
                android:id="@+id/onq_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/background_light"
                android:shadowColor="@android:color/background_light"
                android:text="@string/onq"
                android:textColor="@android:color/black"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>