<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/tableLayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
              android:paddingTop="@dimen/button_space">

    <android.support.v7.widget.CardView
        android:id="@+id/netid_card"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:elevation="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/netID_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_space"
                android:text="@string/current_user"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/netID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_space"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/date_card"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:elevation="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_date_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_space"
                android:text="@string/login_date"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/login_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:paddingTop="10dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/logout"
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:gravity="start|center_vertical"
        android:text="@string/logout"
        tools:gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_it_team_svg"/>

</LinearLayout>